# GoldenEye-Recomp

./: .gitignore  CMakeLists.txt  GoldenEye.rc  README.md  ge_config.toml  ge_manifest.toml
src/: ge_app.h  ge_hooks.cpp  ge_menu.cpp  ge_menu.h
